--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林), server: 213.183.53.207, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.79MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-348.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇳🇱 荷兰-193.1KB/s(Youtube:不良林), server: 213.183.59.206, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林), server: 213.183.53.214, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
-  - {name: 🇳🇱 荷兰-2.01MB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林), server: 213.183.53.177, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林), server: 213.183.53.200, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-231.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.51MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇳🇱 荷兰-995.2KB/s(Youtube:不良林), server: 213.183.59.190, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 波兰-265.4KB/s(Youtube:不良林), server: 217.30.10.67, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇳🇱 荷兰-871.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 波兰-731.1KB/s(Youtube:不良林), server: 217.30.10.66, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 保加利亚-1.09MB/s(Youtube:不良林), server: 213.183.63.219, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇳🇱 荷兰-1.45MB/s(Youtube:不良林), server: 213.183.59.185, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 波兰-742.9KB/s(Youtube:不良林), server: 217.30.10.67, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-193.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
+      - 波兰-265.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
+      - 波兰-731.1KB/s(Youtube:不良林)
+      - 保加利亚-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 波兰-742.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-193.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
+      - 波兰-265.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
+      - 波兰-731.1KB/s(Youtube:不良林)
+      - 保加利亚-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 波兰-742.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-193.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
+      - 波兰-265.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
+      - 波兰-731.1KB/s(Youtube:不良林)
+      - 保加利亚-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 波兰-742.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-193.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
+      - 波兰-265.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
+      - 波兰-731.1KB/s(Youtube:不良林)
+      - 保加利亚-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 波兰-742.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-193.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
+      - 波兰-265.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
+      - 波兰-731.1KB/s(Youtube:不良林)
+      - 保加利亚-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 波兰-742.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-193.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
+      - 波兰-265.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
+      - 波兰-731.1KB/s(Youtube:不良林)
+      - 保加利亚-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 波兰-742.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-193.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
+      - 波兰-265.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
+      - 波兰-731.1KB/s(Youtube:不良林)
+      - 保加利亚-1.09MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 波兰-742.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
