--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-776.6KB/s(Youtube:不良林), server: 38.75.136.102, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-6.90MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-261.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇺🇸 美国-619.8KB/s(Youtube:不良林), server: 38.75.136.102, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 波兰-265.4KB/s(Youtube:不良林), server: 217.30.10.67, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇨🇳 中国-567.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇳🇱 荷兰-995.2KB/s(Youtube:不良林), server: 213.183.59.190, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
   - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林), server: 213.183.53.214, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
   - {name: 🇳🇱 荷兰-871.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
   - {name: 波兰-731.1KB/s(Youtube:不良林), server: 217.30.10.66, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
   - {name: 保加利亚-1.09MB/s(Youtube:不良林), server: 213.183.63.219, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-776.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-261.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-619.8KB/s(Youtube:不良林)
+      - 波兰-265.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
       - 波兰-731.1KB/s(Youtube:不良林)
       - 保加利亚-1.09MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-776.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-261.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-619.8KB/s(Youtube:不良林)
+      - 波兰-265.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
       - 波兰-731.1KB/s(Youtube:不良林)
       - 保加利亚-1.09MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-776.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-261.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-619.8KB/s(Youtube:不良林)
+      - 波兰-265.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
       - 波兰-731.1KB/s(Youtube:不良林)
       - 保加利亚-1.09MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-776.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-261.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-619.8KB/s(Youtube:不良林)
+      - 波兰-265.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
       - 波兰-731.1KB/s(Youtube:不良林)
       - 保加利亚-1.09MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-776.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-261.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-619.8KB/s(Youtube:不良林)
+      - 波兰-265.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
       - 波兰-731.1KB/s(Youtube:不良林)
       - 保加利亚-1.09MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-776.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-261.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-619.8KB/s(Youtube:不良林)
+      - 波兰-265.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
       - 波兰-731.1KB/s(Youtube:不良林)
       - 保加利亚-1.09MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-776.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-261.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-619.8KB/s(Youtube:不良林)
+      - 波兰-265.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
       - 波兰-731.1KB/s(Youtube:不良林)
       - 保加利亚-1.09MB/s(Youtube:不良林)
