--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-265.4KB/s(Youtube:不良林), server: 217.30.10.67, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇨🇳 中国-567.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇳🇱 荷兰-995.2KB/s(Youtube:不良林), server: 213.183.59.190, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林), server: 213.183.53.214, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇳🇱 荷兰-871.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 波兰-731.1KB/s(Youtube:不良林), server: 217.30.10.66, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
-  - {name: 保加利亚-1.09MB/s(Youtube:不良林), server: 213.183.63.219, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇳🇱 荷兰-1.45MB/s(Youtube:不良林), server: 213.183.59.185, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇳🇱 荷兰-684.6KB/s(Youtube:不良林), server: 213.183.51.172, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
   - {name: 波兰-742.9KB/s(Youtube:不良林), server: 217.30.10.67, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇷🇺 俄罗斯联邦-574.9KB/s(Youtube:不良林), server: 213.183.53.200, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-763.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 捷克-639.5KB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
+  - {name: 保加利亚-221.0KB/s(Youtube:不良林), server: 213.183.63.217, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇺🇸 美国-779.7KB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-265.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
-      - 波兰-731.1KB/s(Youtube:不良林)
-      - 保加利亚-1.09MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-684.6KB/s(Youtube:不良林)
       - 波兰-742.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-574.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-763.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 捷克-639.5KB/s(Youtube:不良林)
+      - 保加利亚-221.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-779.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-265.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
-      - 波兰-731.1KB/s(Youtube:不良林)
-      - 保加利亚-1.09MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-684.6KB/s(Youtube:不良林)
       - 波兰-742.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-574.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-763.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 捷克-639.5KB/s(Youtube:不良林)
+      - 保加利亚-221.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-779.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-265.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
-      - 波兰-731.1KB/s(Youtube:不良林)
-      - 保加利亚-1.09MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-684.6KB/s(Youtube:不良林)
       - 波兰-742.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-574.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-763.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 捷克-639.5KB/s(Youtube:不良林)
+      - 保加利亚-221.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-779.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-265.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
-      - 波兰-731.1KB/s(Youtube:不良林)
-      - 保加利亚-1.09MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-684.6KB/s(Youtube:不良林)
       - 波兰-742.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-574.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-763.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 捷克-639.5KB/s(Youtube:不良林)
+      - 保加利亚-221.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-779.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-265.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
-      - 波兰-731.1KB/s(Youtube:不良林)
-      - 保加利亚-1.09MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-684.6KB/s(Youtube:不良林)
       - 波兰-742.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-574.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-763.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 捷克-639.5KB/s(Youtube:不良林)
+      - 保加利亚-221.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-779.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-265.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
-      - 波兰-731.1KB/s(Youtube:不良林)
-      - 保加利亚-1.09MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-684.6KB/s(Youtube:不良林)
       - 波兰-742.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-574.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-763.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 捷克-639.5KB/s(Youtube:不良林)
+      - 保加利亚-221.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-779.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-265.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-995.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-593.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-871.2KB/s(Youtube:不良林)
-      - 波兰-731.1KB/s(Youtube:不良林)
-      - 保加利亚-1.09MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-684.6KB/s(Youtube:不良林)
       - 波兰-742.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-574.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-763.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 捷克-639.5KB/s(Youtube:不良林)
+      - 保加利亚-221.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-779.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
